--- a/index.html
+++ b/index.html
@@ -110,12 +110,10 @@
 						} else {
 							window.onload = updateYear;
 						}
-					}</script></div></div></div></div><!-- end footer --></div><!-- Google Analytics: change UA-XXXXX-X to be your site's ID --><!-- <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+					}</script></div></div></div></div><!-- end footer --></div><!-- Google Analytics: change UA-XXXXX-X to be your site's ID --><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>--><script src=_bower_components/jquery/jquery.js></script><script src=_bower_components/jquery-ui/ui/jquery-ui.js></script><script src=_bower_components/jquery-migrate/jquery-migrate.js></script><script src=scripts/plugins.js></script><script src=rs-plugin/js/jquery.themepunch.revolution.min.js></script><script src=rs-plugin/js/jquery.themepunch.plugins.min.js></script><script src=scripts/scripts.js></script></body></html>
+       ga('create', 'UA-5020021-3');
+       ga('send', 'pageview');</script><script src=_bower_components/jquery/jquery.js></script><script src=_bower_components/jquery-ui/ui/jquery-ui.js></script><script src=_bower_components/jquery-migrate/jquery-migrate.js></script><script src=scripts/plugins.js></script><script src=rs-plugin/js/jquery.themepunch.revolution.min.js></script><script src=rs-plugin/js/jquery.themepunch.plugins.min.js></script><script src=scripts/scripts.js></script></body></html>
